--- a/VeKa/Resourses/Storyboard/Base.lproj/Main.storyboard
+++ b/VeKa/Resourses/Storyboard/Base.lproj/Main.storyboard
@@ -2,7 +2,6 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
@@ -319,15 +318,15 @@
                                 <rect key="frame" x="0.0" y="56" width="414" height="703"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="friendsListIdentifire" rowHeight="76" id="pDo-S0-91U" customClass="FriendsListTableViewCell" customModule="VeKa" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="76"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="friendsListIdentifire" rowHeight="72" id="pDo-S0-91U" customClass="FriendsListTableViewCell" customModule="VeKa" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="72"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="pDo-S0-91U" id="A2Y-4W-dnw">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="76"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="72"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="w66-0f-TyG">
-                                                    <rect key="frame" x="93.5" y="27.5" width="42" height="21"/>
+                                                    <rect key="frame" x="30" y="25.5" width="42" height="21"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="21" id="O3S-mm-fSa"/>
                                                     </constraints>
@@ -335,21 +334,57 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="MkO-ed-HpV">
-                                                    <rect key="frame" x="20" y="10" width="53.5" height="56"/>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="10d-av-CkO" customClass="ShadowView" customModule="VeKa" customModuleProvider="target">
+                                                    <rect key="frame" x="352" y="10" width="52" height="52"/>
+                                                    <subviews>
+                                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6BE-Lf-mNP" customClass="AvatarView" customModule="VeKa" customModuleProvider="target">
+                                                            <rect key="frame" x="0.0" y="0.0" width="52" height="52"/>
+                                                            <subviews>
+                                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="MkO-ed-HpV">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="52" height="52"/>
+                                                                </imageView>
+                                                            </subviews>
+                                                            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                                            <constraints>
+                                                                <constraint firstItem="MkO-ed-HpV" firstAttribute="centerY" secondItem="6BE-Lf-mNP" secondAttribute="centerY" id="B6z-rD-m38"/>
+                                                                <constraint firstItem="MkO-ed-HpV" firstAttribute="centerX" secondItem="6BE-Lf-mNP" secondAttribute="centerX" id="KQG-t6-1sT"/>
+                                                                <constraint firstItem="MkO-ed-HpV" firstAttribute="height" secondItem="6BE-Lf-mNP" secondAttribute="height" id="VIg-Rd-Lvq"/>
+                                                                <constraint firstAttribute="width" secondItem="6BE-Lf-mNP" secondAttribute="height" multiplier="1:1" id="VKH-fS-ejq"/>
+                                                                <constraint firstItem="MkO-ed-HpV" firstAttribute="width" secondItem="6BE-Lf-mNP" secondAttribute="width" id="kP4-LC-zQb"/>
+                                                            </constraints>
+                                                        </view>
+                                                    </subviews>
+                                                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" secondItem="MkO-ed-HpV" secondAttribute="height" multiplier="21:22" id="Ob4-3J-Lh1"/>
+                                                        <constraint firstItem="6BE-Lf-mNP" firstAttribute="width" secondItem="10d-av-CkO" secondAttribute="width" id="950-fQ-J3u"/>
+                                                        <constraint firstItem="6BE-Lf-mNP" firstAttribute="height" secondItem="10d-av-CkO" secondAttribute="height" id="C4N-dI-Epz"/>
+                                                        <constraint firstItem="6BE-Lf-mNP" firstAttribute="centerX" secondItem="10d-av-CkO" secondAttribute="centerX" id="KJA-Cz-fKM"/>
+                                                        <constraint firstItem="6BE-Lf-mNP" firstAttribute="centerY" secondItem="10d-av-CkO" secondAttribute="centerY" id="TR3-lo-NyC"/>
+                                                        <constraint firstAttribute="width" secondItem="10d-av-CkO" secondAttribute="height" multiplier="1:1" id="Y7x-uJ-jQC"/>
                                                     </constraints>
-                                                </imageView>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="shadowRadius">
+                                                            <real key="value" value="15"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="shadowOpasity">
+                                                            <real key="value" value="0.5"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                        <userDefinedRuntimeAttribute type="color" keyPath="shadowColor">
+                                                            <color key="value" systemColor="systemPurpleColor" red="0.68627450980000004" green="0.32156862749999998" blue="0.87058823529999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                        <userDefinedRuntimeAttribute type="size" keyPath="shadowOffset">
+                                                            <size key="value" width="1" height="1"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                    </userDefinedRuntimeAttributes>
+                                                </view>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="MkO-ed-HpV" firstAttribute="leading" secondItem="A2Y-4W-dnw" secondAttribute="leading" constant="20" id="2Ke-tY-wJw"/>
+                                                <constraint firstAttribute="bottom" secondItem="10d-av-CkO" secondAttribute="bottom" constant="10" id="13l-NA-1mN"/>
                                                 <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="w66-0f-TyG" secondAttribute="trailing" constant="20" symbolic="YES" id="2Lp-qR-2af"/>
-                                                <constraint firstItem="MkO-ed-HpV" firstAttribute="top" secondItem="A2Y-4W-dnw" secondAttribute="top" constant="10" id="2bc-zv-33R"/>
-                                                <constraint firstItem="w66-0f-TyG" firstAttribute="centerY" secondItem="MkO-ed-HpV" secondAttribute="centerY" id="6ke-3T-lOb"/>
-                                                <constraint firstItem="MkO-ed-HpV" firstAttribute="centerY" secondItem="A2Y-4W-dnw" secondAttribute="centerY" id="I6a-yf-cZr"/>
-                                                <constraint firstItem="w66-0f-TyG" firstAttribute="leading" secondItem="MkO-ed-HpV" secondAttribute="trailing" constant="20" id="Kw4-tY-l6P"/>
-                                                <constraint firstAttribute="bottom" secondItem="MkO-ed-HpV" secondAttribute="bottom" constant="10" id="PCb-G4-eFn"/>
+                                                <constraint firstItem="w66-0f-TyG" firstAttribute="leading" secondItem="A2Y-4W-dnw" secondAttribute="leadingMargin" constant="10" id="Gy1-fp-zrc"/>
+                                                <constraint firstAttribute="trailing" secondItem="10d-av-CkO" secondAttribute="trailing" constant="10" id="UK2-kR-6FJ"/>
+                                                <constraint firstItem="w66-0f-TyG" firstAttribute="centerY" secondItem="10d-av-CkO" secondAttribute="centerY" id="asx-9J-lXK"/>
+                                                <constraint firstItem="10d-av-CkO" firstAttribute="top" secondItem="A2Y-4W-dnw" secondAttribute="top" constant="10" id="lIL-sS-A1H"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
