--- a/VeKa/Resourses/Storyboard/Base.lproj/Main.storyboard
+++ b/VeKa/Resourses/Storyboard/Base.lproj/Main.storyboard
@@ -213,14 +213,8 @@
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="66"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="56v-sl-P4z">
-                                                    <rect key="frame" x="20" y="10" width="49" height="46"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="width" secondItem="56v-sl-P4z" secondAttribute="height" multiplier="47:44" id="Fkf-IS-77F"/>
-                                                    </constraints>
-                                                </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f3a-Co-3wU">
-                                                    <rect key="frame" x="89" y="22.5" width="42" height="21"/>
+                                                    <rect key="frame" x="76" y="22.5" width="42" height="21"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="21" id="51I-vT-G38"/>
                                                     </constraints>
@@ -228,15 +222,57 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CFx-kH-TvW" customClass="ShadowView" customModule="VeKa" customModuleProvider="target">
+                                                    <rect key="frame" x="10" y="10" width="46" height="46"/>
+                                                    <subviews>
+                                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dBv-Uf-5l5" customClass="AvatarView" customModule="VeKa" customModuleProvider="target">
+                                                            <rect key="frame" x="0.0" y="0.0" width="46" height="46"/>
+                                                            <subviews>
+                                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="56v-sl-P4z">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="46" height="46"/>
+                                                                </imageView>
+                                                            </subviews>
+                                                            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" secondItem="dBv-Uf-5l5" secondAttribute="height" multiplier="1:1" id="B70-KW-woM"/>
+                                                                <constraint firstItem="56v-sl-P4z" firstAttribute="width" secondItem="dBv-Uf-5l5" secondAttribute="width" id="IUo-Gi-yi1"/>
+                                                                <constraint firstItem="56v-sl-P4z" firstAttribute="centerX" secondItem="dBv-Uf-5l5" secondAttribute="centerX" id="fQj-6m-RTd"/>
+                                                                <constraint firstItem="56v-sl-P4z" firstAttribute="height" secondItem="dBv-Uf-5l5" secondAttribute="height" id="rsl-rc-VvH"/>
+                                                                <constraint firstItem="56v-sl-P4z" firstAttribute="centerY" secondItem="dBv-Uf-5l5" secondAttribute="centerY" id="sBa-8W-dta"/>
+                                                            </constraints>
+                                                        </view>
+                                                    </subviews>
+                                                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                                    <constraints>
+                                                        <constraint firstItem="dBv-Uf-5l5" firstAttribute="height" secondItem="CFx-kH-TvW" secondAttribute="height" id="8Vx-T0-qp6"/>
+                                                        <constraint firstItem="dBv-Uf-5l5" firstAttribute="width" secondItem="CFx-kH-TvW" secondAttribute="width" id="JfH-fK-dfx"/>
+                                                        <constraint firstAttribute="width" secondItem="CFx-kH-TvW" secondAttribute="height" multiplier="1:1" id="RDN-j9-Qsp"/>
+                                                        <constraint firstItem="dBv-Uf-5l5" firstAttribute="centerX" secondItem="CFx-kH-TvW" secondAttribute="centerX" id="k6q-47-thD"/>
+                                                        <constraint firstItem="dBv-Uf-5l5" firstAttribute="centerY" secondItem="CFx-kH-TvW" secondAttribute="centerY" id="nKr-n4-cV3"/>
+                                                    </constraints>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="shadowRadius">
+                                                            <real key="value" value="5"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                        <userDefinedRuntimeAttribute type="color" keyPath="shadowColor">
+                                                            <color key="value" systemColor="systemIndigoColor" red="0.34509803919999998" green="0.33725490200000002" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                        <userDefinedRuntimeAttribute type="size" keyPath="shadowOffset">
+                                                            <size key="value" width="-1" height="0.0"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="shadowOpasity">
+                                                            <real key="value" value="0.80000000000000004"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                    </userDefinedRuntimeAttributes>
+                                                </view>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="56v-sl-P4z" firstAttribute="top" secondItem="57R-oL-4p7" secondAttribute="top" constant="10" id="6Qx-oC-Zvt"/>
-                                                <constraint firstItem="56v-sl-P4z" firstAttribute="leading" secondItem="57R-oL-4p7" secondAttribute="leading" constant="20" id="Uhb-Uz-Hyd"/>
-                                                <constraint firstAttribute="bottom" secondItem="56v-sl-P4z" secondAttribute="bottom" constant="10" id="WW9-aV-H0D"/>
-                                                <constraint firstItem="56v-sl-P4z" firstAttribute="centerY" secondItem="57R-oL-4p7" secondAttribute="centerY" id="YMz-NT-AFb"/>
-                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="f3a-Co-3wU" secondAttribute="trailing" constant="10" id="hSS-Yy-Tps"/>
-                                                <constraint firstItem="f3a-Co-3wU" firstAttribute="leading" secondItem="56v-sl-P4z" secondAttribute="trailing" constant="20" id="lnH-IB-3oq"/>
-                                                <constraint firstItem="f3a-Co-3wU" firstAttribute="centerY" secondItem="56v-sl-P4z" secondAttribute="centerY" id="sWj-FE-UtJ"/>
+                                                <constraint firstItem="f3a-Co-3wU" firstAttribute="leading" secondItem="CFx-kH-TvW" secondAttribute="trailing" constant="20" id="Az9-mw-Uah"/>
+                                                <constraint firstItem="CFx-kH-TvW" firstAttribute="top" secondItem="57R-oL-4p7" secondAttribute="top" constant="10" id="PGy-Fh-QkZ"/>
+                                                <constraint firstItem="f3a-Co-3wU" firstAttribute="centerY" secondItem="CFx-kH-TvW" secondAttribute="centerY" id="PuH-dN-GfY"/>
+                                                <constraint firstAttribute="bottom" secondItem="CFx-kH-TvW" secondAttribute="bottom" constant="10" id="W8p-vK-0My"/>
+                                                <constraint firstItem="CFx-kH-TvW" firstAttribute="leading" secondItem="57R-oL-4p7" secondAttribute="leading" constant="10" id="agw-lQ-bmV"/>
+                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="f3a-Co-3wU" secondAttribute="trailing" constant="10" id="uVs-Yd-cFM"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
@@ -364,16 +400,16 @@
                                                     </constraints>
                                                     <userDefinedRuntimeAttributes>
                                                         <userDefinedRuntimeAttribute type="number" keyPath="shadowRadius">
-                                                            <real key="value" value="15"/>
+                                                            <real key="value" value="5"/>
                                                         </userDefinedRuntimeAttribute>
                                                         <userDefinedRuntimeAttribute type="number" keyPath="shadowOpasity">
                                                             <real key="value" value="0.5"/>
                                                         </userDefinedRuntimeAttribute>
                                                         <userDefinedRuntimeAttribute type="color" keyPath="shadowColor">
-                                                            <color key="value" systemColor="systemPurpleColor" red="0.68627450980000004" green="0.32156862749999998" blue="0.87058823529999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                            <color key="value" systemColor="systemGrayColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         </userDefinedRuntimeAttribute>
                                                         <userDefinedRuntimeAttribute type="size" keyPath="shadowOffset">
-                                                            <size key="value" width="1" height="1"/>
+                                                            <size key="value" width="1" height="0.0"/>
                                                         </userDefinedRuntimeAttribute>
                                                     </userDefinedRuntimeAttributes>
                                                 </view>
