--- a/VeKa/Resourses/Storyboard/Base.lproj/Main.storyboard
+++ b/VeKa/Resourses/Storyboard/Base.lproj/Main.storyboard
@@ -130,22 +130,60 @@
                                 <rect key="frame" x="0.0" y="56" width="414" height="786"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="myGroupsIdentifire" rowHeight="66" id="JSe-Qx-dyS" customClass="MyGroupsTableViewCell" customModule="VeKa" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="66"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="myGroupsIdentifire" rowHeight="72" id="JSe-Qx-dyS" customClass="MyGroupsTableViewCell" customModule="VeKa" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="72"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="JSe-Qx-dyS" id="Axc-XU-kxO">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="66"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="72"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="iCp-K0-AM2">
-                                                    <rect key="frame" x="20" y="10" width="46" height="46"/>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="e6d-Jv-PPC" customClass="ShadowView" customModule="VeKa" customModuleProvider="target">
+                                                    <rect key="frame" x="10" y="10" width="52" height="52"/>
+                                                    <subviews>
+                                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YTZ-xa-r7q" customClass="AvatarView" customModule="VeKa" customModuleProvider="target">
+                                                            <rect key="frame" x="0.0" y="0.0" width="52" height="52"/>
+                                                            <subviews>
+                                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="iCp-K0-AM2">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="52" height="52"/>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="height" constant="46" id="RUg-ZI-PnU"/>
+                                                                    </constraints>
+                                                                </imageView>
+                                                            </subviews>
+                                                            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                                            <constraints>
+                                                                <constraint firstItem="iCp-K0-AM2" firstAttribute="centerX" secondItem="YTZ-xa-r7q" secondAttribute="centerX" id="90v-kQ-Zmh"/>
+                                                                <constraint firstItem="iCp-K0-AM2" firstAttribute="height" secondItem="YTZ-xa-r7q" secondAttribute="height" id="AIL-aq-KBG"/>
+                                                                <constraint firstItem="iCp-K0-AM2" firstAttribute="centerY" secondItem="YTZ-xa-r7q" secondAttribute="centerY" id="LOt-Iy-56t"/>
+                                                                <constraint firstItem="iCp-K0-AM2" firstAttribute="width" secondItem="YTZ-xa-r7q" secondAttribute="width" id="p9H-it-oih"/>
+                                                            </constraints>
+                                                        </view>
+                                                    </subviews>
+                                                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="46" id="RUg-ZI-PnU"/>
-                                                        <constraint firstAttribute="width" secondItem="iCp-K0-AM2" secondAttribute="height" multiplier="1:1" id="mHH-Z6-GdM"/>
+                                                        <constraint firstItem="YTZ-xa-r7q" firstAttribute="width" secondItem="e6d-Jv-PPC" secondAttribute="width" id="K9m-J9-d1f"/>
+                                                        <constraint firstItem="YTZ-xa-r7q" firstAttribute="height" secondItem="e6d-Jv-PPC" secondAttribute="height" id="c0g-lc-xyw"/>
+                                                        <constraint firstItem="YTZ-xa-r7q" firstAttribute="centerY" secondItem="e6d-Jv-PPC" secondAttribute="centerY" id="gLV-Ot-xl8"/>
+                                                        <constraint firstAttribute="width" secondItem="e6d-Jv-PPC" secondAttribute="height" multiplier="1:1" id="yue-Bf-LUm"/>
+                                                        <constraint firstItem="YTZ-xa-r7q" firstAttribute="centerX" secondItem="e6d-Jv-PPC" secondAttribute="centerX" id="zRP-bj-SsU"/>
                                                     </constraints>
-                                                </imageView>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="shadowRadius">
+                                                            <real key="value" value="5"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="shadowOpasity">
+                                                            <real key="value" value="0.80000000000000004"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                        <userDefinedRuntimeAttribute type="color" keyPath="shadowColor">
+                                                            <color key="value" systemColor="systemPurpleColor" red="0.68627450980000004" green="0.32156862749999998" blue="0.87058823529999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                        <userDefinedRuntimeAttribute type="size" keyPath="shadowOffset">
+                                                            <size key="value" width="-1" height="0.0"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                    </userDefinedRuntimeAttributes>
+                                                </view>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YOI-jC-Ng3">
-                                                    <rect key="frame" x="86" y="22.5" width="42" height="21"/>
+                                                    <rect key="frame" x="82" y="25.5" width="42" height="21"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="21" id="jsk-HW-qS3"/>
                                                     </constraints>
@@ -155,11 +193,12 @@
                                                 </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="YOI-jC-Ng3" secondAttribute="trailing" priority="750" constant="20" symbolic="YES" id="5bI-O0-MEh"/>
-                                                <constraint firstItem="iCp-K0-AM2" firstAttribute="top" secondItem="Axc-XU-kxO" secondAttribute="top" constant="10" id="BYN-fQ-JeZ"/>
-                                                <constraint firstItem="YOI-jC-Ng3" firstAttribute="centerY" secondItem="iCp-K0-AM2" secondAttribute="centerY" id="Ga7-PS-tyU"/>
-                                                <constraint firstItem="YOI-jC-Ng3" firstAttribute="leading" secondItem="iCp-K0-AM2" secondAttribute="trailing" constant="20" id="b1F-Po-g0Y"/>
-                                                <constraint firstItem="iCp-K0-AM2" firstAttribute="leading" secondItem="Axc-XU-kxO" secondAttribute="leading" constant="20" id="zNw-eD-hc0"/>
+                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="YOI-jC-Ng3" secondAttribute="trailing" priority="750" constant="10" id="5bI-O0-MEh"/>
+                                                <constraint firstItem="YOI-jC-Ng3" firstAttribute="leading" secondItem="e6d-Jv-PPC" secondAttribute="trailing" constant="20" id="BpB-tB-LEf"/>
+                                                <constraint firstAttribute="bottom" secondItem="e6d-Jv-PPC" secondAttribute="bottom" constant="10" id="S5V-rB-IRj"/>
+                                                <constraint firstItem="YOI-jC-Ng3" firstAttribute="centerY" secondItem="e6d-Jv-PPC" secondAttribute="centerY" id="gJn-HV-2Kh"/>
+                                                <constraint firstItem="e6d-Jv-PPC" firstAttribute="leading" secondItem="Axc-XU-kxO" secondAttribute="leading" constant="10" id="oPU-Ot-hq7"/>
+                                                <constraint firstItem="e6d-Jv-PPC" firstAttribute="top" secondItem="Axc-XU-kxO" secondAttribute="top" constant="10" id="u5n-QA-8M3"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
